Prevent buttons from disappearing on navbar and fix pencil being too large on safari issue

--- a/frontend/src/css/GamePage.css
+++ b/frontend/src/css/GamePage.css
@@ -77,6 +77,7 @@ textarea {
     grid-column: 9 / 11;
     background-color: #f7f7f7;
     text-align: center;
+    min-width: 120px;
 }
 
 .playerNames {
