--- a/frontend/src/css/Greeting.css
+++ b/frontend/src/css/Greeting.css
@@ -1,6 +1,5 @@
 .greetingContainer {
   background-color: #a6e9d7;
-
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   justify-items: center;
@@ -15,4 +14,6 @@
 .pencilImage {
   grid-column: 8;
   transform: rotate(45deg);
+  width: 100%;
+  height: 100%;
 }
